# co-sheep

./: .gitignore  README.md  index.html  package-lock.json  package.json
public/: naming.html  settings.html
src/: input-bubble.ts  main.ts  sheep.ts  speech-bubble.ts  sprite.ts  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: capture.rs  cursor.rs  lib.rs  main.rs  memory.rs  onboarding.rs  permissions.rs  personality.rs  screen_info.rs  vision.rs
