[package]
name = "co-sheep"
version = "0.1.0"
description = "Desktop companion sheep with AI commentary"
authors = ["you"]
edition = "2021"

[lib]
name = "co_sheep_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "macos-private-api"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
xcap = "0.9"
reqwest = { version = "0.12", features = ["json"] }
image = { version = "0.25", features = ["jpeg"] }
base64 = "0.22"
tokio = { version = "1", features = ["full"] }
chrono = "0.4"
dirs = "6"
